prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/destrucuring_var_decl_in_if.diag.txt
ERROR: Only single variable declaration is allowed here
testData/diagnostics/destrucuring_var_decl_in_if.nut:1:10

if (local [x] = [1, 2, 3]; x > 4)
          ^
    println("fail")


